--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ members = [
     "day_five",
     "day_six",
     "day_seven",
-    "day_eight"
+    "day_eight",
+    # "day_nine",
+    "day_ten",
 ]
