--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ members = [
     "day_eight",
     "day_nine",
     "day_ten",
+    # "day_eleven",
+    # "day_twelve",
+    # "day_thirteen",
+    "day_fourteen",
 ]
