--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "day_eight",
     "day_nine",
     "day_ten",
-    # "day_eleven",
+    "day_eleven",
     # "day_twelve",
     # "day_thirteen",
     "day_fourteen",
