--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "day_nine",
     "day_ten",
     "day_eleven",
-    # "day_twelve",
+    "day_twelve",
     # "day_thirteen",
     "day_fourteen",
 ]
