--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ members = [
     "day_twelve",
     "day_thirteen",
     "day_fourteen",
-    "day_fifteen"
+    "day_fifteen",
+    "day_sixteen"
 ]
