--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,8 @@ members = [
     "day_fourteen",
     "day_fifteen",
     "day_sixteen",
-    "day_seventeen"
+    "day_seventeen",
+    # "day_eighteen",
+    # "day_nineteen",
+    "day_twenty",
 ]
