--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ members = [
     "day_eighteen",
     # "day_nineteen",
     "day_twenty",
-    "day_twenty-one"
+    "day_twenty-one",
+    "day_twenty-two"
 ]
